fix some z-index styles

--- a/src/assets/scss/pages/search-room.scss
+++ b/src/assets/scss/pages/search-room.scss
@@ -114,7 +114,6 @@
     
     @media (max-width: 923px) {
       display: block;
-      z-index: 60;
       background-color: $default-color;
       max-width: 295px;
       padding: 15px;
@@ -122,7 +121,8 @@
       order: 1;
       text-align: right;
       align-self: stretch;
-      z-index: 60;
+      // z-index: 60;
+      z-index: 9;
       flex-grow: 1;
     }
   }
@@ -158,7 +158,7 @@
 
   &__calendar-wrapper {
     position: absolute;
-    z-index: 10;
+    z-index: 15;
     top: 50px;
   }
 
@@ -170,7 +170,6 @@
   &__filter-guests-dropdown {
     margin-bottom: 31px;
   }
-
   &__filter-slider-description {
     font-size: 12px;
     line-height: 14px;
